src/test/resources/templates/valid/nested-templates.kool
object Program {
  def main () : Unit = {
    if(new Main().run()) println("");
  }
}

class Main {
	Def run(): Bool = {
		var list: A<Int, String>;
		return false;
	}
}

class A<T, U> {
	var value: B<B<B<T, U>, Int>, String>;
}

class B<T, U> {
	var t: T;
	var u: U;
}