src/test/resources/templates/invalid/nested-templates-decl.kool
object Program {
  def main () : Unit = {
    if(new Main().run()) println("");
  }
}

class Main {
	Def run(): Bool = {
		var a: A<Int, String>;
		a = new A<Int, String>();
		println(a.run(5));
		return false;
	}
}

class A<T<X>, U> {
	
	Def run(t: T): T = {
		return t;
	}
}